<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.com.asillos.migration</groupId>
  <artifactId>wildfly-migration-lab</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>WildFly Migration Lab — Java 17 and Jakarta EE 8 on WildFly 26</name>
  <description>Aplicação no gate Java 17/WildFly 26, preservando Jakarta EE 8 e o namespace javax.</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.build.outputTimestamp>2026-01-01T00:00:00Z</project.build.outputTimestamp>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <java.version.range>[17,18)</java.version.range>

    <jakarta.ee.web.api.version>8.0.0</jakarta.ee.web.api.version>
    <mybatis.version>3.5.19</mybatis.version>
    <slf4j.version>1.7.36</slf4j.version>
    <commons.fileupload.version>1.6.0</commons.fileupload.version>
    <commons.io.version>2.19.0</commons.io.version>
    <reflections.version>0.10.2</reflections.version>
    <tiles.version>2.1.4</tiles.version>
    <xmlbeans.version>2.3.0</xmlbeans.version>
    <xml.apis.version>1.3.02</xml.apis.version>
    <geronimo.stax.version>1.0</geronimo.stax.version>
    <dom4j.version>1.6.1</dom4j.version>
  </properties>

  <dependencies>
    <!--
      O Jakarta EE 8 ainda usa pacotes javax.*. Esta API é fornecida pelo
      WildFly 26 e nunca deve entrar em WEB-INF/lib.
    -->
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-web-api</artifactId>
      <version>${jakarta.ee.web.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Dependências modernizadas de forma incremental no gate Java 17. -->
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>${mybatis.version}</version>
    </dependency>
    <!--
      Ponte temporária para os imports org.apache.log4j ainda existentes.
      O backend e a API SLF4J são fornecidos pelo WildFly 26.
    -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-fileupload</groupId>
      <artifactId>commons-fileupload</artifactId>
      <version>${commons.fileupload.version}</version>
    </dependency>
    <!-- Mantida explícita para auditar a versão usada pelo FileUpload. -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons.io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>${reflections.version}</version>
      <exclusions>
        <!-- A API SLF4J é fornecida pelo WildFly e fixada como provided. -->
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.tiles</groupId>
      <artifactId>tiles-api</artifactId>
      <version>${tiles.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tiles</groupId>
      <artifactId>tiles-jsp</artifactId>
      <version>${tiles.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlbeans</groupId>
      <artifactId>xmlbeans</artifactId>
      <version>${xmlbeans.version}</version>
    </dependency>
    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>${xml.apis.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.geronimo.specs</groupId>
      <artifactId>geronimo-stax-api_1.0_spec</artifactId>
      <version>${geronimo.stax.version}</version>
    </dependency>
    <dependency>
      <groupId>dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <version>${dom4j.version}</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>wildfly-migration</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M3</version>
        <executions>
          <execution>
            <id>enforce-java17-toolchain</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.9.16]</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>${java.version.range}</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
        <configuration>
          <failOnMissingWebXml>true</failOnMissingWebXml>
          <outputTimestamp>${project.build.outputTimestamp}</outputTimestamp>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.2</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>oracle</id>
      <properties>
        <java.version.range>[17,18)</java.version.range>
      </properties>
    </profile>
    <profile>
      <id>ci-h2</id>
      <properties>
        <!-- O doctor fixa Temurin 17.0.20+8 nos dois perfis do CP-3A. -->
        <java.version.range>[17,18)</java.version.range>
      </properties>
    </profile>
  </profiles>
</project>
